feat - translate places info

--- a/custom_components/pro-places.html
+++ b/custom_components/pro-places.html
@@ -23,75 +23,75 @@
 
         <pro-place
           image-url="../images/Rome.jpg"
-          image-info="Rome, Italy"
+          image-info="{{t('pro-places-rome')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
           image-url="../images/Germany.jpg"
-          image-info="Neuschwanstein, Germany"
+          image-info="{{t('pro-places-germany')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
           image-url="../images/Manzanares.jpg"
-          image-info="Manzanares el Real, Spain"
+          image-info="{{t('pro-places-manzanares')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
           image-url="../images/Paris.jpg"
-          image-info="Paris, France"
+          image-info="{{t('pro-places-paris')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
           image-url="../images/Brussels.jpg"
-          image-info="Brussels, Belgium"
+          image-info="{{t('pro-places-brussels')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
           image-url="../images/Hillerod.jpg"
-          image-info="Hillerod, Denmark"
+          image-info="{{t('pro-places-hillerod')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
           image-url="../images/Helsinki.jpg"
-          image-info="Helsinki, Finland"
+          image-info="{{t('pro-places-helsinki')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
           image-url="../images/Stockholm.jpg"
-          image-info="Stockholm, Sweden"
+          image-info="{{t('pro-places-malmo')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
           image-url="../images/Odense.jpg"
-          image-info="Odense, Denmark"
+          image-info="{{t('pro-places-odense')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
           image-url="../images/RUC.jpg"
-          image-info="RUC, Denmark"
+          image-info="{{t('pro-places-ruc')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
-        <!--<pro-place
+    <!--<pro-place
           image-url="../images/Merida.jpg"
           image-info="Merida, Spain"
           text="{{t('pro-places-textn')}}"
@@ -100,14 +100,14 @@
 
         <pro-place
           image-url="../images/London.jpg"
-          image-info="London, Great Britain"
+          image-info="{{t('pro-places-london')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
           image-url="../images/Extremadura.jpg"
-          image-info="Extremadura, Spain"
+          image-info="{{t('pro-places-extremadura')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
@@ -128,6 +128,31 @@
         created: function() {
           this.appendLocale('es', 'pro-places-header', 'Viajes');
           this.appendLocale('en', 'pro-places-header', 'Places');
+
+          this.appendLocale('en', 'pro-places-rome', 'Rome, Italy');
+          this.appendLocale('es', 'pro-places-rome', 'Roma, Italia');
+          this.appendLocale('en', 'pro-places-germany', 'Neuschwanstein, Germany');
+          this.appendLocale('es', 'pro-places-germany', 'Neuschwanstein, Alemania');
+          this.appendLocale('en', 'pro-places-manzanares', 'Manzanares el Real, Spain');
+          this.appendLocale('es', 'pro-places-manzanares', 'Manzanares el Real, España');
+          this.appendLocale('en', 'pro-places-paris', 'Paris, France');
+          this.appendLocale('es', 'pro-places-paris', 'París, Francia');
+          this.appendLocale('en', 'pro-places-brussels', 'Brussels, Belgium');
+          this.appendLocale('es', 'pro-places-brussels', 'Bruselas, Bélgica');
+          this.appendLocale('en', 'pro-places-hillerod', 'Hillerod, Denmark');
+          this.appendLocale('es', 'pro-places-hillerod', 'Hillerod, Dinamarca');
+          this.appendLocale('en', 'pro-places-helsinki', 'Helsinki, Finland');
+          this.appendLocale('es', 'pro-places-helsinki', 'Helsinki, Finlandia');
+          this.appendLocale('en', 'pro-places-malmo', 'Stockholm, Sweden');
+          this.appendLocale('es', 'pro-places-malmo', 'Estocolmo, Suecia');
+          this.appendLocale('en', 'pro-places-odense', 'Odense, Denmark');
+          this.appendLocale('es', 'pro-places-odense', 'Odense, Dinamarca');
+          this.appendLocale('en', 'pro-places-ruc', 'RUC, Denmark');
+          this.appendLocale('es', 'pro-places-ruc', 'RUC, Dinamarca');
+          this.appendLocale('en', 'pro-places-london', 'London, Great Britain');
+          this.appendLocale('es', 'pro-places-london', 'Londres, Gran Bretaña');
+          this.appendLocale('en', 'pro-places-extremadura', 'Extremadura, Spain');
+          this.appendLocale('es', 'pro-places-extremadura', 'Extremadura, España');
         }
       });
     })();
