feat - add emojis to experience

--- a/custom_components/pro-experience.html
+++ b/custom_components/pro-experience.html
@@ -85,7 +85,7 @@
     <pro-section-header text="{{t('pro-experience-header')}}"></pro-section-header>
 
     <paper-menu multi class="paperMenu">
-      <pro-experience-submenu header-text="{{t('pro-experience-header-education')}}">
+      <pro-experience-submenu header-text="📚 {{t('pro-experience-header-education')}}">
         <paper-menu class="menu-content menu" multi>
           <paper-item>
             <div class="section">
@@ -107,7 +107,7 @@
           </paper-item>
         </paper-menu>
       </pro-experience-submenu>
-      <pro-experience-submenu header-text="{{t('pro-experience-header-jobs')}}">
+      <pro-experience-submenu header-text="👨‍🏭 {{t('pro-experience-header-jobs')}}">
         <paper-menu class="menu-content menu" multi>
           <paper-item>
             <div class="section">
@@ -138,7 +138,7 @@
           </paper-item>
         </paper-menu>
       </pro-experience-submenu>
-      <pro-experience-submenu header-text="{{t('pro-experience-header-projects')}}">
+      <pro-experience-submenu header-text="💡 {{t('pro-experience-header-projects')}}">
         <paper-menu class="menu-content menu" multi>
           <paper-item>
             <div class="section">
@@ -204,12 +204,12 @@
               <br>
               {{t('pro-experience-header-projects-hecmocerpro-technologies')}} & Polymer
               <br>
-              {{t('pro-experience-header-projects-hecmocerpro-season')}} 2016
+              {{t('pro-experience-header-projects-hecmocerpro-season')}} 2017
             </div>
           </paper-item>
         </paper-menu>
       </pro-experience-submenu>
-      <pro-experience-submenu header-text="{{t('pro-experience-header-technologies')}}">
+      <pro-experience-submenu header-text="🔨 {{t('pro-experience-header-technologies')}}">
         <paper-menu class="menu-content menu techMenu" multi>
           <paper-item style="display: inline; padding: 0">
             <iron-icon class="ironIcon animatedChevron" icon="vaadin-icons:touch"></iron-icon>
@@ -408,8 +408,8 @@
           this.appendLocale('es', 'pro-experience-header-projects-hecmocerpro-technologies', 'Componentes web');
           this.appendLocale('en', 'pro-experience-header-projects-hecmocerpro-technologies', 'Web Components');
 
-          this.appendLocale('es', 'pro-experience-header-projects-hecmocerpro-season', 'Finales');
-          this.appendLocale('en', 'pro-experience-header-projects-hecmocerpro-season', 'Late');
+          this.appendLocale('es', 'pro-experience-header-projects-hecmocerpro-season', 'Principios');
+          this.appendLocale('en', 'pro-experience-header-projects-hecmocerpro-season', 'Early');
         },
       });
     })();
