feat - improve header with — and remove app-drawer

--- a/custom_components/pro-welcome.html
+++ b/custom_components/pro-welcome.html
@@ -94,7 +94,7 @@
 
     <div class="overlay-title">
       <span class="overlay-text">
-        Hecmocer
+        — Hecmocer —
       </span>
       <div class="skewdiv"></div>
     </div>
