fix - fix dialog image displaying on the top caused by an extra span with position relative which made the container height greater than expected

--- a/custom_components/pro-place.html
+++ b/custom_components/pro-place.html
@@ -50,10 +50,11 @@
         top: -55px;
       }
       .img-info-lg{
-        top: -115px;
+        position: fixed;
         display: block;
+        top: 77%;
         font-size: 25px;
-        left: 0;
+        left: 8%;
         padding: 20px 30px !important;
       }
 
