--- a/custom_components/pro-place.html
+++ b/custom_components/pro-place.html
@@ -50,11 +50,11 @@
         top: -55px;
       }
       .img-info-lg{
-        position: fixed;
+        position: absolute;
+        top: 75%;
+        left: 0;
         display: block;
-        top: 77%;
         font-size: 25px;
-        left: 8%;
         padding: 20px 30px !important;
       }
 
