fix - modify dialog text styles in order to achieve responsiveness

--- a/custom_components/pro-place.html
+++ b/custom_components/pro-place.html
@@ -50,12 +50,13 @@
         top: -55px;
       }
       .img-info-lg{
-        position: absolute;
-        top: 75%;
+        position: relative;
+        top: -25px;
         left: 0;
         display: block;
         font-size: 25px;
         padding: 20px 30px !important;
+        border-radius: 0 0 25px 25px;
       }
 
       .dialog{
