--- a/custom_components/pro-place.html
+++ b/custom_components/pro-place.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
+<link rel="import" href="../bower_components/iron-media-query/iron-media-query.html">
 
 <dom-module id='pro-place'>
   <template>
@@ -51,7 +52,7 @@
       }
       .img-info-lg{
         position: relative;
-        top: -25px;
+        top: -25.1px;
         left: 0;
         display: block;
         font-size: 25px;
@@ -68,10 +69,13 @@
       }
 
       .dialogImage{
+        border-radius: 15px 15px 0 0;
         max-height: 90vh;
         max-width: 100%;
       }
     </style>
+
+    <iron-media-query query="(min-width: 700px)" query-matches="{{queryMatches}}"></iron-media-query>
 
     <div class="wrapper">
       <img id="img" src="{{imageUrl}}" alt="" class="hoverable img" on-click="openDialog" on-mouseover="addHoverClass" on-mouseout="removeHoverClass">
@@ -102,17 +106,23 @@
 
           imageInfo: {
             type: String
-          }
+          },
+
+          queryMatches: Boolean
         },
 
         addHoverClass: function(){
-          this.$.imgInfo.classList.add('img-info-active');
-          this.$.img.classList.add('hoverable-hover');
+          if(this.queryMatches) {
+            this.$.imgInfo.classList.add('img-info-active');
+            this.$.img.classList.add('hoverable-hover');
+          }
         },
 
         removeHoverClass: function(){
-          this.$.imgInfo.classList.remove('img-info-active');
-          this.$.img.classList.remove('hoverable-hover');
+          if(this.queryMatches) {
+            this.$.imgInfo.classList.remove('img-info-active');
+            this.$.img.classList.remove('hoverable-hover');
+          }
         },
 
         openDialog: function() {
