feat - add border-radius to profile picture

--- a/custom_components/pro-profile.html
+++ b/custom_components/pro-profile.html
@@ -17,6 +17,10 @@
         height: auto;
         margin: 0 auto;
         width: 65%;
+        transition: border-radius 400ms;
+      }
+      .img:hover{
+        border-radius: 10%;
       }
       .img-container{
         display: flex;
@@ -76,6 +80,7 @@
       }
 
       .dialogImage{
+        border-radius: 25px;
         max-height: 90vh;
         max-width: 100%;
       }
