fix - replace w/ with - to increase i18n

--- a/custom_components/pro-experience.html
+++ b/custom_components/pro-experience.html
@@ -120,7 +120,7 @@
           </paper-item>
           <paper-item>
             <div class="section">
-              BBVA w/ BABEL
+              BBVA - BABEL
               <br>
               {{t('pro-experience-header-jobs-dev')}} (Polymer)
               <br>
@@ -129,7 +129,7 @@
           </paper-item>
           <paper-item>
             <div class="section">
-              BBVA w/ BABEL
+              BBVA - BABEL
               <br>
               {{t('pro-experience-header-jobs-dev')}} (Polymer 2.0)
               <br>
