--- a/custom_components/pro-welcome.html
+++ b/custom_components/pro-welcome.html
@@ -1,10 +1,9 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/paper-spinner/paper-spinner-lite.html">
-<link rel="import" href="../src/shared-styles.html">
 
 <dom-module id="pro-welcome">
   <template>
-    <style include="shared-styles">
+    <style>
       :host {
         display: block;
         overflow: hidden;
