--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, maximum-scale=1.0, initial-scale=1.0, user-scalable=no">
 
     <title>Hecmocer</title>
-    <meta name="description" content="My App description">
+    <meta name="description" content="Hecmocer portfolio">
+    <meta name="keywords" content="Polymer,hecmocer,Babel,BBVA,portfolio,HTML,CSS,JavaScript">
+    <meta name="author" content="Hector Moreno Cervera">
 
     <link rel="icon" href="/images/manifest/favicon.ico">
 
@@ -61,7 +63,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <meta name="msapplication-tap-highlight" content="no">
 
     <link href="https://fonts.googleapis.com/css?family=Pacifico&text=Hecmor" rel="stylesheet">
-
 
     <script>
       // Setup Polymer options
@@ -109,7 +110,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </script>
 
-    <link rel="import" href="/src/my-app.html">
+    <link rel="import" href="/src/app-shell.html">
 
     <style>
       body {
@@ -123,7 +124,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
   </head>
   <body>
-    <my-app></my-app>
-    <!-- Built with love using Polymer Starter Kit -->
+    <app-shell></app-shell>
   </body>
 </html>
