--- a/custom_components/pro-welcome.html
+++ b/custom_components/pro-welcome.html
@@ -2,118 +2,114 @@
 <link rel="import" href="../bower_components/paper-spinner/paper-spinner-lite.html">
 
 <dom-module id="pro-welcome">
+  <style>
+    :host {
+      display: block;
+      overflow: hidden;
+    }
+
+    .videoPosition{
+      margin-left: calc(40% - 768px);
+      margin-top: calc(50vh - 540px);
+    }
+    .imagePosition{
+      height: 100%;
+      margin-left: calc(40% - 60vh);
+    }
+
+    .overlayContainer{
+      background: rgba(0,0,0,0.5);
+      color: #eeeeee;
+      display: flex;
+      font-family: 'Pacifico', cursive;
+      font-size: 36px;
+      justify-content: center;
+      padding: 5px 0 10px 0;
+      position: absolute;
+      text-shadow: 1px 1px 1px black, 2px 2px 15px #0B486B;
+      top: 100px;
+      transform: skewY(-1deg);
+      width: 100%;
+    }
+    .overlayText{
+      transform: skewY(1deg);
+    }
+
+    .scrollIndicatorContainer{
+      align-items: center;
+      background: rgba(0,0,0,0.5);
+      bottom: 35px;
+      color: #eeeeee;
+      display: flex;
+      height: 60px;
+      justify-content: center;
+      left: 35px;
+      position: absolute;
+      width: 50px;
+    }
+    .scrollIndicator{
+      width: 40px;
+      height: 40px;
+
+      animation-name: backandforth;
+      animation-duration: 1.5s;
+      animation-iteration-count: infinite;
+      animation-timing-function: ease-out;
+    }
+    @keyframes backandforth {
+      0%   {top: -10px;}
+      100% {top: 10px;}
+    }
+
+    .spinnerContainer{
+      align-items: center;
+      display: flex;
+      height: 100%;
+    }
+    .spinner{
+      height: 100px;
+      margin: 0 auto;
+      width: 100px;
+      --paper-spinner-stroke-width: 6px;
+    }
+  </style>
   <template>
-    <style>
-      :host {
-        display: block;
-        overflow: hidden;
-      }
-      .videoCenter{
-        margin-top: calc(50vh - 540px);
-        margin-left: calc(40% - 768px);
-      }
-      .imageCenter{
-        height: 100%;
-        margin-left: calc(40% - 60vh);
-        /* 985 / 2 = 492 */
-      }
-      .overlay-title{
-        font-family: 'Pacifico', cursive;
-        font-size: 36px;
-        text-shadow: 1px 1px 1px black, 2px 2px 15px #0B486B;
-        top: 100px;
-        position: absolute;
-        background: rgba(0,0,0,0.5);
-        width: 100%;
-        color: #eeeeee;
-        display: flex;
-        justify-content: center;
-        padding: 5px 0 10px 0;
-        transform: skewY(-1deg);
-      }
-      .overlay-text{
-        transform: skewY(1deg);
-      }
-      .overlay-scroll{
-        position: absolute;
-        background: rgba(0,0,0,0.5);
-        color: #eeeeee;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        bottom: 35px;
-        left: 35px;
-        width: 50px;
-        height: 60px;
-      }
-      .icon{
-        width: 40px;
-        height: 40px;
-
-        animation-name: backandforth;
-        animation-duration: 1.5s;
-        animation-iteration-count: infinite;
-        animation-timing-function: ease-out;
-      }
-
-      @keyframes backandforth {
-        0%   {top: -10px;}
-        100% {top: 10px;}
-      }
-
-      .spinner-container{
-        display: flex;
-        align-items: center;
-        height: 100%;
-      }
-      .spinner{
-        width: 100px;
-        height: 100px;
-        margin: 0 auto;
-        --paper-spinner-stroke-width: 6px;
-      }
-    </style>
 
     <iron-media-query query="(min-width: 600px)" query-matches="{{queryMatches}}"></iron-media-query>
 
     <template is="dom-if" if="{{!queryMatches}}">
-      <img class="imageCenter" src="../images/WelcomeXS.jpg" alt="">
+      <img class="imagePosition" src="../images/WelcomeXS.jpg" alt="Welcome image">
     </template>
 
     <template is="dom-if" if="{{queryMatches}}">
-      <video class="videoCenter" autoplay loop muted>
+      <video class="videoPosition" autoplay loop muted>
         <source src="../images/welcome.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </template>
 
-    <div class="spinner-container">
+    <div class="spinnerContainer">
       <paper-spinner-lite active class="spinner"></paper-spinner-lite>
     </div>
 
-    <div class="overlay-title">
-      <span class="overlay-text">
+    <div class="overlayContainer">
+      <span class="overlayText">
         — Hecmocer —
       </span>
       <div class="skewdiv"></div>
     </div>
 
-    <div class="overlay-scroll">
-      <iron-icon class="icon" icon="vaadin-icons:angle-double-down"></iron-icon>
+    <div class="scrollIndicatorContainer">
+      <iron-icon class="scrollIndicator" icon="vaadin-icons:angle-double-down"></iron-icon>
     </div>
 
   </template>
-
   <script>
    (function() {
       'use strict';
 
       Polymer({
-        is: 'pro-welcome',
-
-        properties: {
-          imageUrl: String
-        }
+        is: 'pro-welcome'
       });
     })();
   </script>
