--- a/custom_components/pro-place.html
+++ b/custom_components/pro-place.html
@@ -38,9 +38,9 @@
       .img-info {
         opacity: 0;
         position: relative;
-        color: white;
+        color: #eeeeee;
         text-shadow: 0 0 5px black;
-        background-color: rgba(0,0,0,0.5);
+        background-color: rgba(0,0,0,0.7);
         padding: 10px;
         left: 1px;
         top: -55px;
@@ -70,7 +70,7 @@
 
       .dialogImage{
         border-radius: 15px 15px 0 0;
-        max-height: 90vh;
+        max-height: 80vh;
         max-width: 100%;
       }
     </style>
