fix - remove shared-styles import and include

--- a/custom_components/pro-contact.html
+++ b/custom_components/pro-contact.html
@@ -1,5 +1,4 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../src/shared-styles.html">
 <link rel='import' href='./pro-i18n-behaviour.html'>
 <link rel='import' href='./pro-section-header.html'>
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
@@ -9,7 +8,7 @@
 
 <dom-module id="pro-contact">
   <template>
-    <style include="shared-styles">
+    <style>
       :host {
         display: block;
         padding: 10px;
