--- a/custom_components/pro-footer.html
+++ b/custom_components/pro-footer.html
@@ -1,11 +1,10 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../src/shared-styles.html">
 <link rel='import' href='pro-i18ned-component.html'>
 <link rel="import" href="../custom_components/pro-language-switcher.html">
 
 <dom-module id="pro-footer">
   <template>
-    <style include="shared-styles">
+    <style>
       :host {
         background: #333333;
         color: #eeeeee;
