--- a/custom_components/pro-places.html
+++ b/custom_components/pro-places.html
@@ -1,12 +1,11 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../src/shared-styles.html">
 <link rel='import' href='pro-i18ned-component.html'>
 <link rel='import' href='./pro-section-header.html'>
 <link rel='import' href='./pro-place.html'>
 
 <dom-module id="pro-places">
   <template>
-    <style include="shared-styles">
+    <style>
       :host {
         display: block;
       }
