--- a/custom_components/pro-experience-submenu.html
+++ b/custom_components/pro-experience-submenu.html
@@ -1,5 +1,4 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../src/shared-styles.html">
 <link rel="import" href="../bower_components/paper-menu/paper-submenu.html">
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
@@ -7,7 +6,7 @@
 
 <dom-module id="pro-experience-submenu">
   <template>
-    <style include="shared-styles">
+    <style>
       :host {
         display: block;
       }
