--- a/custom_components/pro-experience.html
+++ b/custom_components/pro-experience.html
@@ -1,5 +1,4 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../src/shared-styles.html">
 <link rel='import' href='pro-i18ned-component.html'>
 <link rel='import' href='./pro-section-header.html'>
 <link rel="import" href="../bower_components/paper-menu/paper-menu.html">
@@ -16,7 +15,7 @@
 
 <dom-module id="pro-experience">
   <template>
-    <style include="shared-styles">
+    <style>
       :host {
         display: block;
         padding: 10px;
