--- a/custom_components/pro-section-header.html
+++ b/custom_components/pro-section-header.html
@@ -1,9 +1,8 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../src/shared-styles.html">
 
 <dom-module id="pro-section-header">
   <template>
-    <style include="shared-styles">
+    <style>
       :host {
         display: block;
         padding: 10px;
