--- a/custom_components/pro-experience.html
+++ b/custom_components/pro-experience.html
@@ -2,16 +2,12 @@
 <link rel='import' href='pro-i18ned-component.html'>
 <link rel='import' href='./pro-section-header.html'>
 <link rel="import" href="../bower_components/paper-menu/paper-menu.html">
-<link rel="import" href="../bower_components/paper-menu/paper-submenu.html">
 <link rel="import" href="../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../custom_components/pro-experience-submenu.html">
-<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/iron-icons/hardware-icons.html">
 <link rel="import" href="../bower_components/vaadin-icons/vaadin-icons.html">
-
 
 <dom-module id="pro-experience">
   <template>
@@ -22,25 +18,12 @@
       }
 
       .paperMenu{
+        background-color: transparent;
         margin-left: 10%;
         margin-right: 10%;
-        background-color: transparent
       }
-
       .menu{
-        background-color: transparent
-      }
-
-      h2{
-        margin: 0;
-      }
-
-      .subMenuTrigger{
-        margin-top: 10px;
-      }
-
-      .openedMenu{
-        transform: rotate(180deg);
+        background-color: transparent;
       }
 
       *:focus{
@@ -57,32 +40,29 @@
       }
 
       .techMenu{
-        white-space: nowrap;
+        height: 30px;
         overflow-x: auto;
         overflow-y: hidden;
-        height: 30px;
+        white-space: nowrap;
       }
 
-      @keyframes example {
-          0%   {left: 0px;}
-          30%  {left: 10px;}
-          100% {left: 0px;}
-      }
-
-      /* The element to apply the animation to */
       .animatedChevron {
         top: 3px;
         transform: rotate(10deg);
-        animation-name: example;
+
+        animation-name: dragAnimation;
         animation-duration: 1.5s;
         animation-iteration-count: infinite;
         animation-timing-function: linear;
       }
-
+      @keyframes dragAnimation {
+          0%   {left: 0px;}
+          30%  {left: 10px;}
+          100% {left: 0px;}
+      }
     </style>
 
     <pro-section-header text="{{t('pro-experience-header')}}"></pro-section-header>
-
     <paper-menu multi class="paperMenu">
       <pro-experience-submenu header-text="📚 {{t('pro-experience-header-education')}}">
         <paper-menu class="menu-content menu" multi>
@@ -326,8 +306,8 @@
         </paper-menu>
       </pro-experience-submenu>
     </paper-menu>
-  </template>
 
+  </template>
   <script>
    (function() {
       'use strict';
