--- a/custom_components/pro-experience-submenu.html
+++ b/custom_components/pro-experience-submenu.html
@@ -1,8 +1,6 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/paper-menu/paper-submenu.html">
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
-
 
 <dom-module id="pro-experience-submenu">
   <template>
@@ -16,24 +14,24 @@
         margin: 0;
       }
 
-      .subMenuTrigger{
+      .sub-menu-trigger{
         margin-top: 10px;
       }
 
-      .openedMenu{
+      .opened-menu{
         transform: rotate(180deg);
       }
 
-      .transitionTransform{
+      .transition-transform{
         transition: transform 250ms;
       }
     </style>
 
     <paper-submenu>
-      <div class="menu-trigger subMenuTrigger">
+      <div class="menu-trigger sub-menu-trigger">
         <h2>
           [[headerText]]
-          <iron-icon id="rotatableIronIcon" icon="expand-more" class="transitionTransform"></iron-icon>
+          <iron-icon id="rotatableIronIcon" icon="expand-more" class="transition-transform"></iron-icon>
         </h2>
       </div>
       <content></content>
@@ -56,7 +54,7 @@
         },
 
         subMenuClicked: function(e, detail){
-          this.toggleClass('openedMenu', detail.value, this.$.rotatableIronIcon);
+          this.toggleClass('opened-menu', detail.value, this.$.rotatableIronIcon);
         }
       });
     })();
