--- a/custom_components/pro-place.html
+++ b/custom_components/pro-place.html
@@ -61,17 +61,19 @@
       }
 
       .dialog{
+        background-color: transparent;
+        box-shadow: none;
         margin: 0;
         max-width: 90%;
         overflow: hidden;
-        box-shadow: none;
-        background-color: transparent;
       }
 
       .dialogImage{
         border-radius: 15px 15px 0 0;
+        margin: 0 !important;
         max-height: 80vh;
         max-width: 100%;
+        padding: 0 !important;
       }
     </style>
 
@@ -83,7 +85,7 @@
     </div>
 
     <paper-dialog id="dialog" class="dialog" with-backdrop>
-      <img src="{{imageUrl}}" alt="" class="dialogImage" style="padding: 0; margin: 0;">
+      <img src="{{imageUrl}}" alt="" class="dialogImage">
       <span class="img-info img-info-active img-info-lg">[[imageInfo]]</span>
     </paper-dialog>
 
