--- a/custom_components/pro-hoverable-item.html
+++ b/custom_components/pro-hoverable-item.html
@@ -1,4 +1,6 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 
 <dom-module id="pro-hoverable-item">
   <template>
@@ -11,22 +13,19 @@
         transform: scaleX(-1);
       }
 
-      .icon.transition{
-        transition: transform 500ms;
-      }
-
       .icon{
         margin-right: 5px;
+      }
+      .icon.transition{
+        transition: transform 500ms;
       }
 
       .anchor{
         color: #1a0dab;
       }
-
       .anchor:hover{
         cursor: pointer;
       }
-
       .anchor:visited{
         color: #1a0dab;
       }
