--- a/custom_components/pro-footer.html
+++ b/custom_components/pro-footer.html
@@ -1,28 +1,31 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../custom_components/pro-language-switcher.html">
-<link rel='import' href='pro-i18ned-component.html'>
 
 <dom-module id="pro-footer">
   <template>
     <style>
       :host {
+        align-items: center;
         background: #333333;
         color: #eeeeee;
-        padding: 10px;
         display: flex;
         justify-content: space-between;
-        align-items: center;
+        padding: 10px;
+      }
+
+      p{
+        margin: 0;
       }
     </style>
 
       <pro-language-switcher></pro-language-switcher>
       <div>
-        <div>
+        <p>
           HecmocerPro
-        </div>
-        <div>
+        </p>
+        <p>
           15/01/16 - 0.0.1
-        </div>
+        </p>
       </div>
   </template>
 
